Fixed component_info and widgets css and layout issues (state, descriptors, media_icons)

--- a/core/component_info/css/component_info.less
+++ b/core/component_info/css/component_info.less
@@ -67,7 +67,7 @@
 		display: contents;
 
 		>.wrapper_widget {
-			display: contents;
+			// display: contents;
 
 			// ul
 			>.values_container {
