--- a/core/widgets/oh/descriptors/css/descriptors.less
+++ b/core/widgets/oh/descriptors/css/descriptors.less
@@ -5,6 +5,8 @@
 */
 .wrapper_widget.descriptors {
 	// background-color: #fcefe6;
+	display: block;
+	width: 100%;
 
 	>.content_data {
 
